Fix minor layout issue with rank display padding

--- a/assets/base.css
+++ b/assets/base.css
@@ -352,7 +352,7 @@ svg {
   bottom: 0;
   right: 0;
   width: 4rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0;
   border-radius: 1rem;
   font-size: 2rem;
   font-weight: 700;
